Added support for multi-interview

--- a/datatags-app/public/models/privacy/messages.properties
+++ b/datatags-app/public/models/privacy/messages.properties
@@ -1,5 +1,5 @@
 title=DataTags Dataset Deposit Interview
-subtitle=Covering US legislation regarding health, education, and government records
+subtitle=Share sensitive data with confidence
 rejection.title=Sorry, this dataset cannot be accepted.
 rejection.reason=Reason for rejection: {0}.
 acceptance.title=This dataset can be accepted, using the following data handling policy:
