--- a/datatags-app/public/models/privacy/messages.properties
+++ b/datatags-app/public/models/privacy/messages.properties
@@ -3,5 +3,5 @@ subtitle=Share sensitive data with confidence
 rejection.title=Sorry, this dataset cannot be accepted.
 rejection.reason=Reason for rejection: {0}.
 acceptance.title=This dataset can be accepted, using the following data handling policy:
-interview.startButtonReferral=To try the demonstration for a dataset you have in mind, please click on the button below.
+interview.startButtonReferral=To try the demonstration for a dataset you have in mind, please click the "Start Tagging" button.
 interview.startButtonTitle=Start Tagging
